# ai-trading-pro

./: .env.example  AI Trading SaaS Platform Dynamic.md  AI Trading SaaS Platform.md  DEPLOYMENT_GUIDE.md  README.md  fly.toml  pyproject.toml  requirements.txt
app/: main.py
deployment/scripts/: deploy.sh
instance/: ai_trading_saas.db
src/: app.py  database.py  main.py  test_auth.py
src/instance/: ai_trading_saas.db
src/models/: orders.py  social.py  social_engagement.py  trading.py  user.py
src/routes/: advanced_trading_routes.py  auth_routes.py  bot_routes.py  engagement_routes.py  enhanced_trading_routes.py  fund_management_routes.py  live_social_routes.py  multi_platform_routes.py  real_social_routes.py  real_social_routes_old.py  social_routes.py  stats_routes.py  subscription_routes.py  trading_execution_routes.py  trading_routes.py  trading_routes_fixed.py
src/services/: advanced_trading_engine.py  ai_trading_bot.py  ai_trading_engine.py  ai_trading_engine_simple.py  auth_service.py  curated_posts_manager.py  deployment_trading_engine.py  fund_management_service.py  live_kol_service.py  multi_platform_crawler.py  real_post_crawler.py  real_social_crawler.py  real_trading_engine.py  real_trading_engine_broken.py  real_trading_engine_fixed.py  real_trading_engine_methods.py  trade_execution_service.py
src/static/: advanced-trading-styles.css  auth-check.js  brightness-enhancement.css  chart-implementation.js  dashboard.html  dynamic-links-styles.css  dynamic-platform-links.js  engagement-functions.js  (+29 more)
trading-frontend/: index.html  package.json
(+15 files in other folders)
