[tool.poetry]
name = "ai-trading-pro"
version = "1.0.0"
description = "AI Trading SaaS Platform with automated trading, fund management, and social media integration"
authors = ["AI Trading Pro Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
flask = "^3.0.0"
flask-cors = "^4.0.0"
flask-jwt-extended = "^4.6.0"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = "^2.0.23"
werkzeug = "^3.0.1"
requests = "^2.31.0"
pandas = "^2.1.4"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
python-dateutil = "^2.8.2"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
